--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^9.18.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-firebase": "^2.2.8"
+    "react-firebase": "^2.2.8",
+    "react-router-dom": "^6.9.0",
+    "react-simple-snackbar": "^1.1.11",
+    "styled-components": "^5.3.9"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
